Build 2.0.0858 - Added NewVerticalHorizontalTabGroup and MoveToNextPrevTagGroup commands
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@92064 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -390,6 +390,18 @@
                 Command="{Binding Path=FloatCommand}"/>
         <MenuItem Header="Dock as Tabbed Document" 
                 Command="{Binding Path=DockAsDocumentCommand}"/>
+        <MenuItem Header="New Horizontal Tab Group" 
+                Command="{Binding Path=NewHorizontalTabGroupCommand}"
+                Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"/>
+        <MenuItem Header="New Vertical Tab Group" 
+                Command="{Binding Path=NewVerticalTabGroupCommand}"
+                Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"/>
+        <MenuItem Header="Move To Next Tab Group" 
+                Command="{Binding Path=MoveToNextTabGroupCommand}"
+                Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"/>
+        <MenuItem Header="Move To Previous Tab Group" 
+                Command="{Binding Path=MoveToPreviousTabGroupCommand}"
+                Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"/>
     </ContextMenu>
 
     <!--DockingManager-->
