Build 2.0.0954 - Fixed #15277, Added CanFloat property, revisisted internal drag of documents, minor VS2010 theme adjustments
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@92418 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
+++ b/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
@@ -549,7 +549,7 @@
             Background="{DynamicResource AvalonDock_ThemeVS2010_BaseColor16}"
             BorderThickness="1"
             CornerRadius="3,3,0,0"
-            Margin="2" 
+            Margin="0,4,0,0"
             Padding="2">
                 <ContentPresenter 
                     TextElement.Foreground="{DynamicResource AvalonDock_ThemeVS2010_BaseColor2}"
@@ -560,12 +560,15 @@
         <ControlTemplate.Triggers>
             <Trigger Property="Side" Value="Right">
                 <Setter Property="CornerRadius" Value="0,0,3,3" TargetName="Bd"/>
+                <Setter Property="Margin" Value="0,0,0,4" TargetName="Bd"/>
             </Trigger>
             <Trigger Property="Side" Value="Bottom">
                 <Setter Property="CornerRadius" Value="3,3,0,0" TargetName="Bd"/>
+                <Setter Property="Margin" Value="0,4,0,0" TargetName="Bd"/>
             </Trigger>
             <Trigger Property="Side" Value="Top">
                 <Setter Property="CornerRadius" Value="0,0,3,3" TargetName="Bd"/>
+                <Setter Property="Margin" Value="0,0,0,4" TargetName="Bd"/>
             </Trigger>            
             <MultiTrigger>
                 <MultiTrigger.Conditions>
